@@ -1,3 +1,11 @@
+23
+
+* general code cleanup
+
+22
+
+* fixed SVG bug in old Sugar builds
+
 21
 
 * general clean up of sprite library
